--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
-title: Hacker-Blog
-description: "A Jekyll Blog Theme For Hackers"
+title: Kanin9
+description: "Cybersec enthusiast"
 author:
-  name: "SomeHacker"
-  email: "someone@somewebsite.somedomain"
+  name: "Alikraken"
+  email: ""
   url: "https://kanin9.github.io/"
 
-baseurl: /
+baseurl: /archive
 
 source: .
 destination: ./_site
@@ -28,5 +28,5 @@ plugins:
   - jekyll-sitemap
 
 # Custom variables
-owner : "SomeHacker"
-year : "2020"
+owner : "Alikraken"
+year : "2022"
