--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Kanin9
-description: "Cybersec enthusiast"
+title: Alikraken's Blog
+description: "Cybersec related stuff"
 author:
   name: "Alikraken"
   email: ""
